favorites container fixed height overflow scroll

--- a/src/components/UI/Header.module.css
+++ b/src/components/UI/Header.module.css
@@ -40,7 +40,8 @@
     position: absolute;
     top: 100%;
     width: 100vw;
-    /* min-height: calc(100vh - var(--header-height)); */
+    max-height: calc(100vh - var(--header-height));
+    overflow-y: scroll;
     background-color: #313131;
     transition: transform .3s ease-out;
     transform: translateX(-150vw);
